fix: fixing z-index issue on GradientLayout

--- a/src/Components/Shared/GradientLayout/gradientLayout.module.css
+++ b/src/Components/Shared/GradientLayout/gradientLayout.module.css
@@ -9,7 +9,7 @@
   width: 100%;
   background: url("./background-gradient-stripes.png");
   background-size: cover;
-  z-index: 0;
+  z-index: 1;
 }
 
 .gradientLayout::before {
